generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  CUSTOMER
  PARTNER
  ADMIN
  STAFF
}

enum AuthProvider {
  LOCAL
  GOOGLE
}

enum UserStatus {
  ACTIVE
  LOCKED
}

model User {
  id              String       @id @default(uuid())
  email           String       @unique
  passwordHash    String?
  fullName        String
  role            UserRole     @default(CUSTOMER)
  provider        AuthProvider @default(LOCAL)
  isEmailVerified Boolean      @default(false)
  status          UserStatus   @default(ACTIVE)
  tokenVersion    Int          @default(0)
  // Đối tác chủ quản của nhân viên này. Chỉ set khi role = STAFF.
  employerPartnerId String?
  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt

  profile                 UserProfile?
  emailVerificationTokens EmailVerificationToken[]
  passwordResetTokens     PasswordResetToken[]
  oauthAccounts           OAuthAccount[]
  authSessions            AuthSession[]
  partnerProfile          PartnerProfile?
  employer                PartnerProfile?             @relation("PartnerStaff", fields: [employerPartnerId], references: [id], onDelete: Cascade)
  favoriteAttractions     FavoriteAttraction[]
  reviews                 Review[]
  reservations            Reservation[]
  bookings                Booking[]
  supportTickets          SupportTicket[]
  staffAssignments        StaffAttractionAssignment[] @relation("StaffAssignments")
  createdStaffAssignments StaffAttractionAssignment[] @relation("StaffAssignmentsCreatedBy")
  checkedInTickets        TicketInstance[]            @relation("TicketCheckedInBy")
  auditLogs               AuditLog[]
  savedItineraries        SavedItinerary[]

  @@index([employerPartnerId])
}

model UserProfile {
  id          String    @id @default(uuid())
  userId      String    @unique
  phoneNumber String?
  avatarUrl   String?
  dateOfBirth DateTime?
  gender      String?
  address     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model EmailVerificationToken {
  id        String   @id @default(uuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model PasswordResetToken {
  id        String   @id @default(uuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model OAuthAccount {
  id                String   @id @default(uuid())
  userId            String
  provider          String
  providerAccountId String
  createdAt         DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@index([userId])
}

model AuthSession {
  id         String    @id @default(uuid())
  userId     String
  tokenHash  String?   @unique
  userAgent  String?
  ipAddress  String?
  expiresAt  DateTime
  revokedAt  DateTime?
  lastSeenAt DateTime?
  createdAt  DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([expiresAt])
  @@index([revokedAt])
}

// ==========================================
// CÁC ENUM MỚI DÀNH CHO MODULE 2
// ==========================================

enum PartnerStatus {
  PENDING
  APPROVED
  REJECTED
  SUSPENDED
}

// Phân khúc giá của điểm tham quan - dùng làm feature cho AI dự báo doanh thu
// (thay cho one-hot toàn bộ attractionId, giúp model tổng quát hoá tốt hơn
// với điểm tham quan mới/ít dữ liệu lịch sử).
enum AttractionTier {
  BUDGET // Vé bình dân, giá trung bình thấp
  STANDARD // Phổ thông
  PREMIUM // Cao cấp
  LUXURY // Hạng sang, giá vé rất cao
}

enum AttractionStatus {
  DRAFT
  PENDING
  APPROVED
  REJECTED
  SUSPENDED
}

enum AttractionPublicationStatus {
  PAUSED
  ACTIVE
  ARCHIVED
}

enum TicketStatus {
  ACTIVE
  INACTIVE
}

enum TicketType {
  ADULT
  CHILD
  FAMILY
  GROUP
}

enum RefundPolicyType {
  NON_REFUNDABLE
  FREE_CANCELLATION
  REFUND_WITH_FEE
}

// Reservation enum + model (Task 6)
enum ReservationStatus {
  HELD
  CONFIRMED
  EXPIRED
  CANCELLED
}

enum BookingStatus {
  PENDING_PAYMENT
  PENDING_PARTNER
  CONFIRMED
  CANCELLED
  COMPLETED
  NO_SHOW
  REFUND_REQUESTED
  REFUNDED
}

enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
}

enum TicketInstanceStatus {
  VALID
  USED
  EXPIRED
  REFUNDED
}

enum VoucherDiscountType {
  FIXED
  PERCENTAGE
}

model Reservation {
  id                  String            @id @default(uuid())
  userId              String
  ticketProductId     String
  timeSlotId          String?
  date                DateTime          @db.Date
  quantity            Int
  status              ReservationStatus @default(HELD)
  expiresAt           DateTime
  paymentDeadline     DateTime?
  paymentAttemptCount Int               @default(0)
  createdAt           DateTime          @default(now())

  user          User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  ticketProduct TicketProduct @relation(fields: [ticketProductId], references: [id], onDelete: Cascade)
  timeSlot      TimeSlot?     @relation(fields: [timeSlotId], references: [id])
  booking       Booking?

  @@index([status, expiresAt])
  @@index([userId, createdAt])
  @@index([ticketProductId, date])
}

// ==========================================
// CÁC MODEL THIẾT KẾ MỚI
// ==========================================

model PartnerProfile {
  id                 String        @id @default(uuid())
  userId             String        @unique
  businessName       String
  businessLicenseUrl String?
  taxCode            String?
  bankName           String?
  branchName         String?
  bankAccountNumber  String?
  bankAccountName    String?
  swiftCode          String?
  payoutCurrency     String        @default("VND")
  website            String?
  description        String?
  commissionRate     Decimal       @default(0.10) @db.Decimal(5, 2)
  status             PartnerStatus @default(PENDING)
  rejectionReason    String?
  createdAt          DateTime      @default(now())
  updatedAt          DateTime      @updatedAt

  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  attractions  Attraction[]
  staffMembers User[]       @relation("PartnerStaff")
}

model StaffAttractionAssignment {
  id           String    @id @default(uuid())
  staffId      String
  attractionId String
  createdById  String?
  createdAt    DateTime  @default(now())
  revokedAt    DateTime?

  staff      User       @relation("StaffAssignments", fields: [staffId], references: [id], onDelete: Cascade)
  attraction Attraction @relation(fields: [attractionId], references: [id], onDelete: Cascade)
  createdBy  User?      @relation("StaffAssignmentsCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)

  @@unique([staffId, attractionId])
  @@index([staffId, revokedAt])
  @@index([attractionId, revokedAt])
}

model Attraction {
  id                     String                      @id @default(uuid())
  partnerId              String
  title                  String
  description            String                      @db.Text
  address                String
  city                   String
  district               String?
  openTime               String? // Giờ mở cửa, định dạng "HH:MM"
  closeTime              String? // Giờ đóng cửa, định dạng "HH:MM"
  openDays               String? // 7 ngày trong tuần dạng CSV bool, vd "1,1,1,1,1,0,0"
  defaultCapacity        Int                         @default(100)
  requiresManualApproval Boolean                     @default(false) // Đơn đặt vé cần đối tác duyệt thủ công
  latitude               Float?
  longitude              Float?
  tier                   AttractionTier              @default(STANDARD) // Phân khúc giá dùng làm feature cho AI dự báo doanh thu
  status                 AttractionStatus            @default(DRAFT)
  publicationStatus      AttractionPublicationStatus @default(PAUSED)
  rejectionReason        String?
  draftData              Json?
  submittedData          Json?
  revision               Int                         @default(0)
  submittedAt            DateTime?
  reviewedAt             DateTime?
  reviewedById           String?
  publishedAt            DateTime?
  averageRating          Float                       @default(0.0)
  totalReviews           Int                         @default(0)
  minTicketPrice         Decimal?                    @db.Decimal(12, 2)
  createdAt              DateTime                    @default(now())
  updatedAt              DateTime                    @updatedAt
  archivedAt             DateTime?

  partner        PartnerProfile       @relation(fields: [partnerId], references: [id], onDelete: Cascade)
  images         AttractionImage[]
  categories     AttractionCategory[]
  ticketProducts TicketProduct[]
  favoritedBy    FavoriteAttraction[]
  reviews        Review[]
  timeSlots      TimeSlot[] // Khung giờ cấp điểm tham quan (Module 2)
  specialDates   SpecialDate[] // Lịch đặc biệt (đóng cửa / đổi sức chứa)

  dailyStocks      AttractionDailyStock[]
  staffAssignments StaffAttractionAssignment[]
  revenueForecasts RevenueForecast[]

  @@index([city])
  @@index([status])
  @@index([publicationStatus])
  @@index([archivedAt])
  @@index([minTicketPrice])
}

model AttractionImage {
  id           String   @id @default(uuid())
  attractionId String
  imageUrl     String
  isPrimary    Boolean  @default(false)
  createdAt    DateTime @default(now())

  attraction Attraction @relation(fields: [attractionId], references: [id], onDelete: Cascade)

  @@index([attractionId])
}

model Category {
  id          String   @id @default(uuid())
  name        String   @unique
  description String?
  icon        String?
  isActive    Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  attractions AttractionCategory[]
}

model NewsletterSubscription {
  id           String   @id @default(uuid())
  email        String   @unique
  isActive     Boolean  @default(true)
  subscribedAt DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@index([isActive])
}

model AttractionCategory {
  attractionId String
  categoryId   String

  attraction Attraction @relation(fields: [attractionId], references: [id], onDelete: Cascade)
  category   Category   @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@id([attractionId, categoryId])
}

model TicketProduct {
  id            String           @id @default(uuid())
  attractionId  String
  name          String
  type          TicketType       @default(ADULT)
  description   String           @db.Text
  originalPrice Decimal          @db.Decimal(12, 2)
  sellingPrice  Decimal          @db.Decimal(12, 2)
  status        TicketStatus     @default(ACTIVE)
  refundPolicy  RefundPolicyType @default(NON_REFUNDABLE)
  refundFeeRate Decimal          @default(0.0) @db.Decimal(5, 2)
  createdAt     DateTime         @default(now())
  updatedAt     DateTime         @updatedAt
  archivedAt    DateTime?

  attraction      Attraction       @relation(fields: [attractionId], references: [id], onDelete: Cascade)
  timeSlots       TimeSlot[]
  dailyStocks     DailyStock[]
  reservations    Reservation[]
  ticketInstances TicketInstance[]

  @@index([archivedAt])
}

model TimeSlot {
  id              String  @id @default(uuid())
  ticketProductId String? // Khung giờ theo gói vé (luồng đặt vé)
  attractionId    String? // Khung giờ cấp điểm tham quan (Module 2 - trang Lịch)
  startTime       String
  endTime         String
  maxCapacity     Int
  isActive        Boolean @default(true)

  ticketProduct  TicketProduct?  @relation(fields: [ticketProductId], references: [id], onDelete: Cascade)
  attraction     Attraction?     @relation(fields: [attractionId], references: [id], onDelete: Cascade)
  timeSlotStocks TimeSlotStock[]
  reservations   Reservation[]

  @@index([attractionId])
}

model SpecialDate {
  id           String   @id @default(uuid())
  attractionId String
  date         DateTime @db.Date
  closed       Boolean  @default(false)
  capacity     Int? // Sức chứa ghi đè cho ngày này (null = dùng mặc định)
  note         String?
  createdAt    DateTime @default(now())

  attraction Attraction @relation(fields: [attractionId], references: [id], onDelete: Cascade)

  @@unique([attractionId, date])
}

model DailyStock {
  id              String   @id @default(uuid())
  ticketProductId String
  date            DateTime
  capacity        Int
  bookedQuantity  Int      @default(0)
  heldQuantity    Int      @default(0)

  ticketProduct TicketProduct @relation(fields: [ticketProductId], references: [id], onDelete: Cascade)

  @@unique([ticketProductId, date])
  @@index([date])
}

model AttractionDailyStock {
  id           String   @id @default(uuid())
  attractionId String
  date         DateTime @db.Date
  capacity     Int
  bookedQty    Int      @default(0)
  heldQty      Int      @default(0)

  attraction Attraction @relation(fields: [attractionId], references: [id], onDelete: Cascade)

  @@unique([attractionId, date])
  @@index([date])
}

model TimeSlotStock {
  id         String   @id @default(uuid())
  timeSlotId String
  date       DateTime
  bookedQty  Int      @default(0)
  heldQty    Int      @default(0)

  timeSlot TimeSlot @relation(fields: [timeSlotId], references: [id], onDelete: Cascade)

  @@unique([timeSlotId, date])
  @@index([date])
}

model FavoriteAttraction {
  userId       String
  attractionId String
  createdAt    DateTime @default(now())

  user       User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  attraction Attraction @relation(fields: [attractionId], references: [id], onDelete: Cascade)

  @@id([userId, attractionId])
}

model Review {
  id           String    @id @default(uuid())
  userId       String
  attractionId String
  bookingId    String?   @unique
  rating       Int
  comment      String?   @db.Text
  isHidden     Boolean   @default(false)
  replyComment String?   @db.Text
  repliedAt    DateTime?
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  user       User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  attraction Attraction @relation(fields: [attractionId], references: [id], onDelete: Cascade)
  booking    Booking?   @relation(fields: [bookingId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([attractionId, isHidden, createdAt])
}

model Booking {
  id                         String           @id @default(uuid())
  userId                     String
  reservationId              String           @unique
  voucherId                  String?
  subtotalAmount             Decimal          @db.Decimal(12, 2)
  discountAmount             Decimal          @default(0.0) @db.Decimal(12, 2)
  totalAmount                Decimal          @db.Decimal(12, 2)
  status                     BookingStatus    @default(PENDING_PAYMENT)
  refundRequired             Boolean          @default(false) // Đã thu tiền nhưng đơn bị hủy/không giữ được vé → cần hoàn tiền thủ công
  paymentMethod              String?
  fullName                   String
  email                      String
  phone                      String?
  note                       String?          @db.Text
  snapshotAt                 DateTime         @default(now())
  snapshotAttractionId       String?
  snapshotAttractionTitle    String           @default("")
  snapshotAttractionAddress  String           @default("")
  snapshotAttractionCity     String           @default("")
  snapshotAttractionDistrict String?
  snapshotAttractionImage    String?
  snapshotTicketName         String           @default("")
  snapshotTicketType         TicketType       @default(ADULT)
  snapshotTicketDescription  String?          @db.Text
  snapshotUnitPrice          Decimal          @default(0.0) @db.Decimal(12, 2)
  snapshotRefundPolicy       RefundPolicyType @default(NON_REFUNDABLE)
  snapshotRefundFeeRate      Decimal          @default(0.0) @db.Decimal(5, 2)
  snapshotVisitDate          DateTime?        @db.Date
  snapshotTimeSlotLabel      String?
  createdAt                  DateTime         @default(now())
  updatedAt                  DateTime         @updatedAt

  user               User                @relation(fields: [userId], references: [id], onDelete: Cascade)
  reservation        Reservation         @relation(fields: [reservationId], references: [id], onDelete: Cascade)
  voucher            Voucher?            @relation(fields: [voucherId], references: [id])
  payments           Payment[]
  ticketInstances    TicketInstance[]
  refundRequests     RefundRequest[]
  refundTransactions RefundTransaction[]
  review             Review?

  @@index([userId])
  @@index([voucherId])
  @@index([status])
  @@index([snapshotAttractionId])
  @@index([snapshotVisitDate])
}

model Payment {
  id                   String        @id @default(uuid())
  bookingId            String
  amount               Decimal       @db.Decimal(12, 2)
  paymentGateway       String
  transactionId        String?       @unique
  status               PaymentStatus @default(PENDING)
  expiresAt            DateTime?
  paidAt               DateTime?
  failureReason        String?
  isDuplicate          Boolean       @default(false)
  duplicateOfPaymentId String?
  rawResponse          Json?
  createdAt            DateTime      @default(now())
  updatedAt            DateTime      @updatedAt

  booking            Booking             @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  duplicateOfPayment Payment?            @relation("DuplicatePayment", fields: [duplicateOfPaymentId], references: [id], onDelete: SetNull)
  duplicatePayments  Payment[]           @relation("DuplicatePayment")
  refundTransactions RefundTransaction[]

  @@index([bookingId])
  @@index([status])
  @@index([expiresAt])
  @@index([isDuplicate])
}

model TicketInstance {
  id              String               @id @default(uuid())
  bookingId       String
  ticketProductId String
  qrCodeToken     String               @unique
  status          TicketInstanceStatus @default(VALID)
  checkedInAt     DateTime?
  checkedInById   String?
  createdAt       DateTime             @default(now())
  updatedAt       DateTime             @updatedAt

  booking       Booking       @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  ticketProduct TicketProduct @relation(fields: [ticketProductId], references: [id], onDelete: Cascade)
  checkedInBy   User?         @relation("TicketCheckedInBy", fields: [checkedInById], references: [id], onDelete: SetNull)

  @@index([bookingId])
  @@index([ticketProductId])
  @@index([status])
  @@index([checkedInById])
  @@index([checkedInAt])
}

model Voucher {
  id            String              @id @default(uuid())
  code          String              @unique
  discountType  VoucherDiscountType
  discountValue Decimal             @db.Decimal(12, 2)
  maxDiscount   Decimal?            @db.Decimal(12, 2)
  minSpend      Decimal?            @db.Decimal(12, 2)
  expiryDate    DateTime
  isActive      Boolean             @default(true)
  usageLimit    Int?
  usedCount     Int                 @default(0)
  createdAt     DateTime            @default(now())
  updatedAt     DateTime            @updatedAt

  bookings Booking[]

  @@index([isActive, expiryDate])
}

enum RefundStatus {
  PENDING
  PROCESSING
  APPROVED
  REJECTED
}

enum RefundTransactionStatus {
  PENDING
  PROCESSING
  SUCCESS
  FAILED
  NEEDS_RECONCILIATION
}

enum SupportStatus {
  OPEN
  IN_PROGRESS
  RESOLVED
}

model RefundRequest {
  id                  String       @id @default(uuid())
  bookingId           String       @unique
  requestedById       String
  reason              String       @db.Text
  amount              Decimal      @db.Decimal(12, 2)
  status              RefundStatus @default(PENDING)
  staffNotes          String?      @db.Text
  processedById       String?
  processingStartedAt DateTime?
  createdAt           DateTime     @default(now())
  processedAt         DateTime?
  updatedAt           DateTime     @updatedAt

  booking            Booking             @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  refundTransactions RefundTransaction[]

  @@index([status])
  @@index([requestedById])
}

model RefundTransaction {
  id               String                  @id @default(uuid())
  bookingId        String
  paymentId        String?
  refundRequestId  String?
  gateway          String                  @default("VNPAY")
  gatewayRequestId String                  @unique
  transactionType  String?
  amount           Decimal                 @db.Decimal(12, 2)
  status           RefundTransactionStatus @default(PENDING)
  reason           String?                 @db.Text
  rawRequest       Json?
  rawResponse      Json?
  processedById    String?
  processedAt      DateTime?
  createdAt        DateTime                @default(now())
  updatedAt        DateTime                @updatedAt

  booking       Booking        @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  payment       Payment?       @relation(fields: [paymentId], references: [id], onDelete: SetNull)
  refundRequest RefundRequest? @relation(fields: [refundRequestId], references: [id], onDelete: SetNull)

  @@index([bookingId])
  @@index([paymentId])
  @@index([refundRequestId])
  @@index([status])
}

model ScheduledJobLock {
  jobName     String    @id
  lockedBy    String?
  lockedUntil DateTime?
  updatedAt   DateTime  @updatedAt
  createdAt   DateTime  @default(now())
}

model AuditLog {
  id         String   @id @default(uuid())
  actorId    String?
  action     String
  entityType String
  entityId   String?
  ipAddress  String?
  userAgent  String?
  metadata   Json?
  createdAt  DateTime @default(now())

  actor User? @relation(fields: [actorId], references: [id], onDelete: SetNull)

  @@index([actorId])
  @@index([action])
  @@index([entityType, entityId])
  @@index([createdAt])
}

model SupportTicket {
  id          String        @id @default(uuid())
  userId      String
  bookingId   String?
  subject     String
  description String        @db.Text
  status      SupportStatus @default(OPEN)
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  user     User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  messages SupportMessage[]

  @@index([userId])
  @@index([status])
}

model SupportMessage {
  id        String   @id @default(uuid())
  ticketId  String
  senderId  String
  message   String   @db.Text
  createdAt DateTime @default(now())

  ticket SupportTicket @relation(fields: [ticketId], references: [id], onDelete: Cascade)

  @@index([ticketId])
}

// ============================================================
// Lưu lịch trình AI do người dùng generate và muốn giữ lại.
// data: JSON snapshot toàn bộ plan (cùng cấu trúc với response
//       của POST /api/ai/itinerary), không normalize thêm để
//       giữ đơn giản và không bị ảnh hưởng khi schema thay đổi.
// ============================================================
model SavedItinerary {
  id        String   @id @default(uuid())
  userId    String
  planId    String   // client-generated ID (clientPlanId hoặc UUID)
  title     String
  data      Json     // full plan snapshot
  criteria  Json?    // tham số tạo lịch (city, days, budget, ...)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, planId])
  @@index([userId])
  @@index([createdAt])
}

// ============================================================
// AI Revenue Forecasting
// ------------------------------------------------------------
// Kết quả dự báo doanh thu theo attraction + ngày, do ml-service
// (FastAPI, ensemble RandomForest + XGBoost) sinh ra. Node backend
// gọi ml-service, nhận kết quả rồi lưu (upsert) vào bảng này để:
//   - Không phải gọi lại ml-service mỗi lần Admin/Partner xem dashboard
//   - Lưu vết modelVersion để so sánh khi retrain
//   - Sau khi qua ngày dự báo, actualRevenue được điền vào (job định kỳ)
//     để tính lại sai số thực tế (MAPE) phục vụ theo dõi chất lượng model
// Quyền xem: chỉ ADMIN (toàn nền tảng) và PARTNER (chỉ attraction của
// chính mình) - STAFF không có quyền xem dự báo doanh thu.
// ============================================================
model RevenueForecast {
  id                String   @id @default(uuid())
  attractionId      String
  forecastDate      DateTime @db.Date // Ngày được dự báo doanh thu
  predictedRevenue  Decimal  @db.Decimal(14, 2)
  predictedBookings Int      @default(0)
  confidenceLower   Decimal? @db.Decimal(14, 2) // Cận dưới khoảng tin cậy
  confidenceUpper   Decimal? @db.Decimal(14, 2) // Cận trên khoảng tin cậy
  actualRevenue     Decimal? @db.Decimal(14, 2) // Điền sau khi qua ngày forecastDate, để tính sai số thực tế
  modelVersion      String // Định danh phiên bản model đã sinh ra dự báo này (vd "rf_xgb_ensemble_v1")
  generatedAt       DateTime @default(now())
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  attraction Attraction @relation(fields: [attractionId], references: [id], onDelete: Cascade)

  @@unique([attractionId, forecastDate, modelVersion])
  @@index([attractionId])
  @@index([forecastDate])
}

